# context-harness

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/: init-context  profile-dreamer
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: adapt-agent-backup  sync-conversations
.codex-plugin/: plugin.json
.github/workflows/: agent-backup-adapter-review.yml  claude-code-review.yml  publish-claude-plugin.yml  publish-codex-plugin.yml
context_harness/: __init__.py  __main__.py  cli.py  config.py  datetime_utils.py  init.py  markdown.py  okf.py
context_harness/collectors/: claude_code.py  codex.py  hermes_agent.py  opencode.py
context_harness/hooks/: claude_code.py  codex.py
docs/: agent-backup-adapter-architecture.md
docs/superpowers/specs/: 2026-06-16-context-harness-design.md  2026-06-22-okf-support-design.md
plugins/context-harness/: .gitignore  LICENSE
scripts/: build_claude_plugin_marketplace.py  build_codex_plugin_marketplace.py  install.sh
skills/adapt-agent-backup/: SKILL.md
skills/init-context/: SKILL.md
skills/profile-dreamer/: SKILL.md
skills/sync-conversations/: SKILL.md
tests/: test_claude_code_collector.py  test_cli_commands.py  test_cli_smoke.py  test_codex_collector.py  test_config.py  test_hermes_agent_collector.py  test_hooks.py  test_indexing.py  test_init.py  test_markdown.py  test_migrate_okf.py  test_okf.py  test_opencode_collector.py  test_skill_bootstrap.py
tests/fixtures/: codex-response-session.jsonl  hermes-agent-session.jsonl
(+22 files in other folders)
